--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -18,6 +18,17 @@ a {
   margin-left: auto;
   margin-right: auto;
 }
+.title {
+  color: #767e7e;
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+.lv2 {
+  color: #0d1111;
+  font-size: 4.2rem;
+  font-weight: 700;
+  line-height: 133.3%;
+}
 /* ===========header=========== */
 .header {
   background: #fff;
@@ -70,6 +81,7 @@ a {
 .hero .main {
   display: flex;
   margin-top: 62px;
+  margin-bottom: 72px;
 }
 .hero .hero-l {
   width: 50%;
@@ -225,4 +237,38 @@ a {
   color: #fff;
   font-size: 1rem;
   font-weight: 500;
+}
+/* =======feature======== */
+.feature{
+  margin-top: 150px;
+}
+.feature .idea {
+  width: 1024px;
+  height: 559px;
+  flex-shrink: 0;
+}
+.feature .top {
+  max-width: 57.6%;
+  gap: 18px;
+}
+.feature .top p {
+  color: #767e7e;
+  font-size: 1.8rem;
+}
+.feature .bot {
+  margin-top: 80px;
+  display: flex;
+  justify-content: space-between;
+}
+.feature .bot .name {
+  color: #0d1111;
+  font-size: 2rem;
+  font-weight: 600;
+  margin: 26px 0 16px;
+}
+.feature .bot .desc {
+  color: #9da6a5;
+  font-size: 1.6rem;
+  line-height: 168.8%;
+  white-space: pre;
 }
