--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -112,7 +112,7 @@ a {
 .hero .btn {
   color: #fff;
   padding: 20px 40px;
-  font-size: 18px;
+  font-size: 1.8rem;
   font-weight: 600;
   border-radius: 14px;
   background: #1ebfc1;
@@ -388,7 +388,7 @@ a {
 .note .left {
   max-width: 37%;
 }
-.note .open{
+.note .open {
   margin-top: 37px;
 }
 .note .said {
@@ -446,14 +446,14 @@ a {
   height: 12px;
   object-fit: cover;
 }
-.note .right{
+.note .right {
   max-width: 73%;
   position: relative;
 }
 .note .right .lv1 {
   width: 235px;
   height: 235px;
-  background-color: #FF8282;
+  background-color: #ff8282;
   border-radius: 50%;
   position: absolute;
   top: 107px;
@@ -462,12 +462,11 @@ a {
 .note .right .lv2 {
   width: 110px;
   height: 110px;
-  background-color: #BF83FF;
+  background-color: #bf83ff;
   border-radius: 50%;
   position: absolute;
   top: 19px;
   left: 569px;
-  
 }
 .note .right .lv3 {
   width: 92px;
@@ -476,7 +475,6 @@ a {
   border-radius: 50%;
   position: absolute;
   left: 144px;
-  
 }
 .note .right .lv4 {
   width: 78px;
@@ -484,23 +482,47 @@ a {
   border-radius: 50%;
   position: relative;
 }
-.note .right .bl{
-  background-color: #B1DFDC;
+.note .right .bl {
+  background-color: #b1dfdc;
   position: absolute;
   top: 347px;
   left: 569px;
-  
 }
-.note .right .r{
-  background-color:#FF947A;
+.note .right .r {
+  background-color: #ff947a;
   position: relative;
   top: 403px;
   left: 212px;
-  
 }
-.note .right .yel{
-  background-color: #FFC147;
+.note .right .yel {
+  background-color: #ffc147;
   position: relative;
   top: 258px;
-  
+}
+/* ======ready======== */
+.ready {
+  margin-top: 167px;
+  background: #def6f5;
+}
+.ready .amit {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.ready .text .lv2 {
+  margin: 76px 0 18px;
+}
+.ready .text .desc {
+  color: #767e7e;
+  font-size: 1.8rem;
+  margin-bottom: 88px;
+}
+.ready .btn{
+  color: #fff;
+  padding: 20px 41px 21px;
+  font-size: 1.8rem;
+  font-weight: 600;
+  border-radius: 14px;
+  background: #1ebfc1;
+  box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.05);
 }
