--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -517,7 +517,7 @@ a {
   font-size: 1.8rem;
   margin-bottom: 88px;
 }
-.ready .btn{
+.ready .btn {
   color: #fff;
   padding: 20px 41px 21px;
   font-size: 1.8rem;
@@ -525,4 +525,29 @@ a {
   border-radius: 14px;
   background: #1ebfc1;
   box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.05);
+}
+/* =====footer======= */
+.footer .main {
+  margin-top: 131px;
+}
+.footer a {
+  display: flex;
+  color: #535353;
+  font-size: 1.6rem;
+  margin-top: 18px;
+}
+.footer .body {
+  display: flex;
+  justify-content: space-between;
+}
+.footer .up {
+  color: #2e2e2e;
+  font-size: 1.8rem;
+  font-weight: 500;
+}
+.footer .cp{
+  display: flex;
+}
+.footer .copyright {
+  margin: 80px auto 50px;
 }
